--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <canvas id="bg">
 
     </canvas>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
